--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <title>Simpson API</title>
     </head>
     <body>
-        <h1>Simpsons</h1>
+        <h1>The Simpsons</h1>
         <a href="/characters">Go to characters</a>
     </body>
 </html>
